Improve pregen rad handling and chunk task cleanup
Reworks several parts of Chunker’s pre-generation flow to make radius-based runs more accurate and cleaner behind the scenes.

This updates how block, chunk, and region radius inputs are converted into chunk targets, so runs should stay closer to the size the user requested. It also improves stop handling, progress tracking, saved state loading, and chunk unload behavior on Paper and Folia.

Player chunk tracking was cleaned up as well, with safer task lookups and better handling for movement, world changes, and player quits. Several internal paths were also adjusted to reduce repeated lookups and avoid extra object creation during heavy runs.